Fix for sidebar plugin buttons not fitting in blocks: Issue #102

--- a/src/GeositeFramework/css/app.css
+++ b/src/GeositeFramework/css/app.css
@@ -148,11 +148,10 @@ h1, h2, h3, h4, h5, h6 {
 					color: #FFF;
 				}
 				.content .sidebar ul.side-nav li a {
-					max-height: 75px;
 					text-align: center;
 					color: #939598;
 					min-height: 75px;
-					padding: 10px 0 0;
+					padding: 10px 0 10px;
 					font-size: 12px;
 					font-weight: 700;
 					line-height: 16px;
